AUTOMAKE_OPTIONS = foreign

pix_opencvexamplesdir=$(pkglibdir)/examples

nobase_dist_pix_opencvexamples_DATA = \
00_opencv_haarcascade+pix_image/00_opencv_haarcascade+pix_image.pd \
00_opencv_haarcascade+pix_image/bocadillo.gif \
00_opencv_haarcascade+pix_image/haarcascade_frontalface_alt.xml \
01_boundingrect+pmpd_ambient/01_boundingrect+pmpd_ambient.pd \
01_boundingrect+pmpd_ambient/pd_link.pd \
01_boundingrect+pmpd_ambient/pd_mass.pd \
02_opencv_motempl+particle_system/02_opencv_motempl+particle_system.pd \
03_opencv_hist_compare+text_trigger/03_opencv_hist_compare+text_trigger.pd \
03_opencv_hist_compare+text_trigger/vera.ttf \
04_opencv_colorfilt+video_projector/04_opencv_colorfilt+video_projector.pd \
04_opencv_colorfilt+video_projector/anim-1.mov \
04_opencv_colorfilt+video_projector/tmp.pd \
05_perspective_correction/05_perspective_correction.pd \
05_perspective_correction/pattern.png \
05_perspective_correction/subprocess.pd \
06_GPU_opticalflow/06_GPU_opticalflow.pd \
06_GPU_opticalflow/of.frag \
07_shape_extractor/07_shape_extractor.pd \
08_GPU_morphology/08_GPU_morphology.pd \
08_GPU_morphology/dilate.frag \
08_GPU_morphology/erode.frag \
08_GPU_morphology/glsl_morph.pd \
09_vp_calibration/01.flat_projection-help.pd \
09_vp_calibration/09_vp_calibration_gpu.pd \
09_vp_calibration/09_vp_calibration.pd \
09_vp_calibration/flat_projection.pd \
09_vp_calibration/pattern.png \
09_vp_calibration/soft_edge.frag \
09_vp_calibration/subprocess.pd \
09_vp_calibration/temp2.JPG \
10-fast_blobtracker/10-fast_blob_tracker.pd \
11-blobtracker2/11-blobtracker2.pd \
dessin.tif \
test-contours.bmp
