AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

pix_opencvhelpdir=$(pkglibdir)

dist_pix_opencvhelp_DATA = \
  pix_opencv_athreshold-help.pd \
  pix_opencv_backgroundsubtractor-help.pd \
  pix_opencv_bgstats-help.pd \
  pix_opencv_bgsubstract-help.pd \
  pix_opencv_blobtrack-help.pd \
  pix_opencv_calibration-help.pd \
  pix_opencv_camshift-help.pd \
  pix_opencv_clahe-help.pd \
  pix_opencv_colorfilt-help.pd \
  pix_opencv_contours_boundingrect-help.pd \
  pix_opencv_contours_convexhull-help.pd \
  pix_opencv_contours_convexity-help.pd \
  pix_opencv_contours-help.pd \
  pix_opencv_dft-help.pd \
  pix_opencv_distrans-help.pd \
  pix_opencv_edge-help.pd \
  pix_opencv_facetracker-help.pd \
  pix_opencv_findchessboardcorners-help.pd \
  pix_opencv_floodfill-help.pd \
  pix_opencv_haarcascade-help.pd \
  pix_opencv_hist_compare-help.pd \
  pix_opencv_hough_circles-help.pd \
  pix_opencv_hough_lines-help.pd \
  pix_opencv_hu_compare-help.pd \
  pix_opencv_hu_moments-help.pd \
  pix_opencv_knear-help.pd \
  pix_opencv_laplace-help.pd \
  pix_opencv_lk-help.pd \
  pix_opencv_matchshape-help.pd \
  pix_opencv_morphology-help.pd \
  pix_opencv_motempl-help.pd \
  pix_opencv_of_bm-help.pd \
  pix_opencv_of_hs-help.pd \
  pix_opencv_of_lk-help.pd \
  pix_opencv_opticalflow-help.pd \
  pix_opencv_pgh_compare-help.pd \
  pix_opencv_surf-help.pd \
  pix_opencv_threshold-help.pd \
  pix_opencv_trackKnn-help.pd \
  pix_opencv_warpperspective-help.pd
